DC bara analitik modellemesi üzerine kapsamılı bir çalışma yapıldı. Simulasyon modeli çalışır hale getirildi. Interleaving etkileri detaylı olarak incelendi.

--- a/.gitignore
+++ b/.gitignore
@@ -309,3 +309,162 @@ Simulation/modular/Modular_Model_New_Board_acc.mexw64
 Simulation/modular/slprj/accel/Modular_Model_New_Board/Modular_Model_New_Board_acc.def
 Simulation/modular/slprj/accel/Modular_Model_New_Board/sfun.map
 Simulation/modular/Modular_Model_New_Board_acc.exp
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sim_model_simpledclink_acc.def
+Simulation/analytical model/slprj/accel/sim_model_simpledclink/sfun.map
+Simulation/analytical model/sim_model_simpledclink_acc.exp
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/sim_model_withparasitic_rlload_acc.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/sim_model_withparasitic_rlload.mk
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/sim_model_withparasitic_rlload.bat
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/sfun.map
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/rtwtypes.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/rtw_proj.tmw
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/rt_nonfinite.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/rt_nonfinite.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/rt_defines.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/rtGetNaN.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/rtGetNaN.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/rtGetInf.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/rtGetInf.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/multiword_types.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/modelsources.txt
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/defines.txt
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/rt_defines.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/rtGetNaN.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/rtGetNaN.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/rtGetInf.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/rtGetInf.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/multiword_types.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/modelsources.txt
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/defines.txt
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/codedescriptor.dmr
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/__cf_sim_model_simpledclink_2parallel.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/zero_crossing_types.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/sim_model_withparasitic_rlload_types.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/sim_model_withparasitic_rlload_ref.rsp
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/sim_model_withparasitic_rlload_private.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/sim_model_withparasitic_rlload_data.c
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/sim_model_withparasitic_rlload.mk
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/sim_model_withparasitic_rlload.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/sim_model_withparasitic_rlload.c
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/sim_model_withparasitic_rlload.bat
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/rtGetInf.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/multiword_types.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/modelsources.txt
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/defines.txt
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/codedescriptor.dmr
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/__cf_sim_model_simpledclink_2series_rlload.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/sim_model_simpledclink_2parallel_rlload_ref.rsp
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/sim_model_simpledclink_2parallel_rlload_acc_types.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/sim_model_simpledclink_2parallel_rlload_acc_private.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/sim_model_simpledclink_2parallel_rlload_acc_data.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/sim_model_simpledclink_2parallel_rlload_acc.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/sim_model_simpledclink_2parallel_rlload_acc.def
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/sim_model_simpledclink_2parallel_rlload_acc.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/sim_model_simpledclink_2parallel_rlload.mk
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/sim_model_simpledclink_2parallel_rlload.bat
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/sfun.map
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/rtwtypes.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/rtw_proj.tmw
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/rt_nonfinite.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/rt_nonfinite.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/rt_defines.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/rtGetNaN.h
+Simulation/analytical model/slprj/grt/_sharedutils/shared_file.dmr
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/rtGetNaN.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/rtGetInf.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/rtGetInf.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/multiword_types.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/modelsources.txt
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/defines.txt
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/codedescriptor.dmr
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel_rlload/__cf_sim_model_simpledclink_2parallel_rlload.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/sim_model_simpledclink_2parallel_ref.rsp
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/sim_model_simpledclink_2parallel_acc_types.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/sim_model_simpledclink_2parallel_acc_private.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/sim_model_simpledclink_2parallel_acc_data.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/sim_model_simpledclink_2parallel_acc.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/sim_model_simpledclink_2parallel_acc.def
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/sim_model_simpledclink_2parallel_acc.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/sim_model_simpledclink_2parallel.mk
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/sim_model_simpledclink_2parallel.bat
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/sfun.map
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/rtwtypes.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/rtw_proj.tmw
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/rt_nonfinite.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2parallel/rt_nonfinite.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/modelsources.txt
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/defines.txt
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/codedescriptor.dmr
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/__cf_sim_model_simpledclink_rlload.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/sim_model_simpledclink_2series_rlload_ref.rsp
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/sim_model_simpledclink_2series_rlload_acc_types.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/sim_model_simpledclink_2series_rlload_acc_private.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/sim_model_simpledclink_2series_rlload_acc_data.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/sim_model_simpledclink_2series_rlload_acc.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/sim_model_simpledclink_2series_rlload_acc.def
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/sim_model_simpledclink_2series_rlload_acc.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/sim_model_simpledclink_2series_rlload.mk
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/sim_model_simpledclink_2series_rlload.bat
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/sfun.map
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/rtwtypes.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/rtw_proj.tmw
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/rt_nonfinite.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/rt_nonfinite.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/rt_defines.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/rtGetNaN.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/rtGetNaN.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_2series_rlload/rtGetInf.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/codedescriptor.dmr
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/__cf_sim_model_withparasitic_rlload.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/sim_model_simpledclink_rlload_ref.rsp
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/sim_model_simpledclink_rlload_acc_types.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/sim_model_simpledclink_rlload_acc_private.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/sim_model_simpledclink_rlload_acc_data.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/sim_model_simpledclink_rlload_acc.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/sim_model_simpledclink_rlload_acc.def
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/sim_model_simpledclink_rlload_acc.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/sim_model_simpledclink_rlload.mk
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/sim_model_simpledclink_rlload.bat
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/sfun.map
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/rtwtypes.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/rtw_proj.tmw
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/rt_nonfinite.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/rt_nonfinite.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/rt_defines.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/rtGetNaN.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/rtGetNaN.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/rtGetInf.h
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/rtGetInf.c
+Simulation/analytical model/slprj/accel/sim_model_simpledclink_rlload/multiword_types.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/sim_model_withparasitic_rlload_ref.rsp
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/sim_model_withparasitic_rlload_acc_types.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/sim_model_withparasitic_rlload_acc_private.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/sim_model_withparasitic_rlload_acc_data.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/sim_model_withparasitic_rlload_acc.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload/sim_model_withparasitic_rlload_acc.def
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/rtwtypes.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/rtw_proj.tmw
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/rtmodel.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/rt_nonfinite.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/rt_nonfinite.c
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/rt_defines.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/rtGetNaN.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/rtGetNaN.c
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/rtGetInf.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/rtGetInf.c
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/multiword_types.h
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/modelsources.txt
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/defines.txt
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/codedescriptor.dmr
+Simulation/analytical model/sim_model_withparasitic_rlload_grt_rtw/builtin_typeid_types.h
+Simulation/analytical model/sim_model_simpledclink_2parallel_acc.mexw64
+Simulation/analytical model/sim_model_simpledclink_rlload.slx.original
+Simulation/analytical model/sim_model_simpledclink_2series_rlload_acc.mexw64
+Simulation/analytical model/sim_model_simpledclink_2parallel_acc.exp
+Simulation/analytical model/sim_model_withparasitic_rlload_acc.exp
+Simulation/analytical model/sim_model_simpledclink_rlload_acc.mexw64
+Simulation/analytical model/sim_model_simpledclink_rlload_acc.exp
+Simulation/analytical model/sim_model_simpledclink_2parallel_rlload_acc.mexw64
+Simulation/analytical model/sim_model_simpledclink_2parallel_rlload_acc.exp
+Simulation/analytical model/sim_model_withparasitic_rlload_acc.mexw64
+Simulation/analytical model/sim_model_simpledclink_2series_rlload_acc.exp
