Analitik model ve voltage balancing üzerine çalışmalar.

--- a/.gitignore
+++ b/.gitignore
@@ -489,3 +489,81 @@ Simulation/balancing/slprj/accel/balancing_sim_model/rtGetNaN.obj
 Simulation/balancing/slprj/accel/balancing_sim_model/balancing_sim_model_acc_data.obj
 Simulation/balancing/slprj/accel/balancing_sim_model_RL_load/rt_nonfinite.obj
 Simulation/balancing/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load_acc.obj
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/sim_model_withparasitic_rlload_before_ref.rsp
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/sim_model_withparasitic_rlload_before_acc_types.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/sim_model_withparasitic_rlload_before_acc_private.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/rtw_proj.tmw
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/rt_nonfinite.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/rt_nonfinite.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/rt_defines.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/rtGetNaN.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/rtGetNaN.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/rtGetInf.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/rtGetInf.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/sim_model_withparasitic_rlload_bef_acc_data.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/sim_model_withparasitic_rlload_bef_acc.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/sim_model_withparasitic_rlload_bef_acc.def
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/sim_model_withparasitic_rlload_bef_acc.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/sim_model_withparasitic_rlload_bef.mk
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/sim_model_withparasitic_rlload_bef.bat
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/sfun.map
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/rtwtypes.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/rtw_proj.tmw
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/rt_nonfinite.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/rt_nonfinite.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/rt_defines.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/rtGetNaN.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/rtGetNaN.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/rtGetInf.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/rtGetInf.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/sim_model_withparasitic_rlload_before_acc_data.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/sim_model_withparasitic_rlload_before_acc.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/sim_model_withparasitic_rlload_before_acc.def
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/sim_model_withparasitic_rlload_before_acc.c
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/sim_model_withparasitic_rlload_before.mk
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/sim_model_withparasitic_rlload_before.bat
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/sfun.map
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/rtwtypes.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/multiword_types.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/modelsources.txt
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/defines.txt
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/codedescriptor.dmr
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_before/__cf_sim_model_withparasitic_rlload_before.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/sim_model_withparasitic_rlload_bef_ref.rsp
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/sim_model_withparasitic_rlload_bef_acc_types.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/sim_model_withparasitic_rlload_bef_acc_private.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/multiword_types.h
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/modelsources.txt
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/defines.txt
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/codedescriptor.dmr
+Simulation/analytical model/slprj/accel/sim_model_withparasitic_rlload_bef/__cf_sim_model_withparasitic_rlload_bef.h
+Simulation/analytical model/sim_model_withparasitic_rlload_bef_acc.mexw64
+Simulation/analytical model/sim_model_withparasitic_rlload_before_acc.mexw64
+Simulation/analytical model/sim_model_withparasitic_rlload_before_acc.exp
+Simulation/analytical model/sim_model_withparasitic_rlload_bef_acc.exp
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/multiword_types.h
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/modelsources.txt
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/defines.txt
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/codedescriptor.dmr
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_ref.rsp
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc.c
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage.mk
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/sfun.map
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/rtwtypes.h
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/rtw_proj.tmw
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/rt_nonfinite.h
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/rt_nonfinite.c
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc_private.h
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc_data.c
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc.h
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc.def
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage.bat
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/__cf_balancing_sim_model_induced_voltage.h
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/rt_defines.h
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/rtGetNaN.h
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/rtGetNaN.c
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/rtGetInf.h
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/rtGetInf.c
+Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc_types.h
+Simulation/balancing/balancing_sim_model_induced_voltage_acc.mexw64
+Simulation/balancing/balancing_sim_model_induced_voltage_acc.exp
