Planning the very first control of the motor (in progress).

--- a/.gitignore
+++ b/.gitignore
@@ -567,3 +567,31 @@ Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/rtGetInf.c
 Simulation/balancing/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc_types.h
 Simulation/balancing/balancing_sim_model_induced_voltage_acc.mexw64
 Simulation/balancing/balancing_sim_model_induced_voltage_acc.exp
+Simulation/control/slprj/accel/pmsm_vbyf_trial/codedescriptor.dmr
+Simulation/control/slprj/accel/pmsm_vbyf_trial/__cf_pmsm_vbyf_trial.h
+Simulation/control/pmsm_vbyf_trial_acc.mexw64
+Simulation/control/slprj/sl_proj.tmw
+Simulation/control/slprj/sim/_sharedutils/shared_file.dmr
+Simulation/control/slprj/accel/pmsm_vbyf_trial/sfun.map
+Simulation/control/slprj/accel/pmsm_vbyf_trial/pmsm_vbyf_trial_acc.c
+Simulation/control/slprj/accel/pmsm_vbyf_trial/pmsm_vbyf_trial.mk
+Simulation/control/pmsm_vbyf_trial_acc.exp
+Simulation/control/slprj/accel/pmsm_vbyf_trial/pmsm_vbyf_trial_acc_data.c
+Simulation/control/slprj/accel/pmsm_vbyf_trial/pmsm_vbyf_trial_acc.h
+Simulation/control/slprj/accel/pmsm_vbyf_trial/multiword_types.h
+Simulation/control/slprj/accel/pmsm_vbyf_trial/modelsources.txt
+Simulation/control/slprj/accel/pmsm_vbyf_trial/defines.txt
+Simulation/control/slprj/accel/pmsm_vbyf_trial/pmsm_vbyf_trial_ref.rsp
+Simulation/control/slprj/accel/pmsm_vbyf_trial/pmsm_vbyf_trial_acc_types.h
+Simulation/control/slprj/accel/pmsm_vbyf_trial/pmsm_vbyf_trial.bat
+Simulation/control/slprj/accel/pmsm_vbyf_trial/rtGetNaN.c
+Simulation/control/slprj/accel/pmsm_vbyf_trial/rtGetInf.h
+Simulation/control/slprj/accel/pmsm_vbyf_trial/pmsm_vbyf_trial_acc_private.h
+Simulation/control/slprj/accel/pmsm_vbyf_trial/rt_nonfinite.c
+Simulation/control/slprj/accel/pmsm_vbyf_trial/rt_defines.h
+Simulation/control/slprj/accel/pmsm_vbyf_trial/rtGetInf.c
+Simulation/control/slprj/accel/pmsm_vbyf_trial/rtwtypes.h
+Simulation/control/slprj/accel/pmsm_vbyf_trial/rtw_proj.tmw
+Simulation/control/slprj/accel/pmsm_vbyf_trial/pmsm_vbyf_trial_acc.def
+Simulation/control/slprj/accel/pmsm_vbyf_trial/rtGetNaN.h
+Simulation/control/slprj/accel/pmsm_vbyf_trial/rt_nonfinite.h
