Balancing simülasyon senkronizasyon.

--- a/.gitignore
+++ b/.gitignore
@@ -595,3 +595,58 @@ Simulation/control/slprj/accel/pmsm_vbyf_trial/rtw_proj.tmw
 Simulation/control/slprj/accel/pmsm_vbyf_trial/pmsm_vbyf_trial_acc.def
 Simulation/control/slprj/accel/pmsm_vbyf_trial/rtGetNaN.h
 Simulation/control/slprj/accel/pmsm_vbyf_trial/rt_nonfinite.h
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/rtwtypes.h
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/rtw_proj.tmw
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/rt_nonfinite.h
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/rt_nonfinite.c
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/rt_defines.h
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/rtGetNaN.h
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/rtGetNaN.c
+Simulation/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load_acc.def
+Simulation/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load_acc.c
+Simulation/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load.mk
+Simulation/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load.bat
+Simulation/slprj/accel/balancing_sim_model_RL_load/__cf_balancing_sim_model_RL_load.h
+Simulation/control/slprj/_jitprj/sVow8YTnwxlYhJgnBSX3MtB.l
+Simulation/balancing_sim_model_induced_voltage_acc.mexw64
+Simulation/slprj/accel/balancing_sim_model_RL_load/defines.txt
+Simulation/slprj/accel/balancing_sim_model_RL_load/codedescriptor.dmr
+Simulation/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load_ref.rsp
+Simulation/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load_acc_types.h
+Simulation/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load_acc_private.h
+Simulation/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load_acc_data.c
+Simulation/slprj/accel/balancing_sim_model_RL_load/balancing_sim_model_RL_load_acc.h
+Simulation/balancing_sim_model_induced_voltage_acc.exp
+Simulation/balancing_sim_model_RL_load_acc.mexw64
+Simulation/balancing_sim_model_RL_load_acc.exp
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage.bat
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/__cf_balancing_sim_model_induced_voltage.h
+Simulation/slprj/accel/balancing_sim_model_RL_load/sfun.map
+Simulation/slprj/accel/balancing_sim_model_RL_load/rtwtypes.h
+Simulation/slprj/accel/balancing_sim_model_RL_load/rtw_proj.tmw
+Simulation/slprj/accel/balancing_sim_model_RL_load/rt_nonfinite.h
+Simulation/slprj/accel/balancing_sim_model_RL_load/rt_nonfinite.c
+Simulation/slprj/sl_proj.tmw
+Simulation/slprj/sim/_sharedutils/shared_file.dmr
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/sfun.map
+Simulation/slprj/accel/balancing_sim_model_RL_load/rt_defines.h
+Simulation/slprj/accel/balancing_sim_model_RL_load/rtGetNaN.h
+Simulation/slprj/accel/balancing_sim_model_RL_load/rtGetNaN.c
+Simulation/slprj/accel/balancing_sim_model_RL_load/rtGetInf.h
+Simulation/slprj/accel/balancing_sim_model_RL_load/rtGetInf.c
+Simulation/slprj/accel/balancing_sim_model_RL_load/multiword_types.h
+Simulation/slprj/accel/balancing_sim_model_RL_load/modelsources.txt
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc_types.h
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc_private.h
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc_data.c
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc.h
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc.def
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_acc.c
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage.mk
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/rtGetInf.h
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/rtGetInf.c
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/multiword_types.h
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/modelsources.txt
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/defines.txt
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/codedescriptor.dmr
+Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_ref.rsp
