@hakansrc ile birlikte yapılan testin raporu eklendi. @ozank, @furkankarakaya, @tokgozfurkan. Testte seri bağlı modüllerin yüksek gerilimde testi yapıldı. Dikkate değer sonuçlar elde edildi. Ayrıca kontrol kartının DC bara dağıtım devresini seri bağlayıp gerilim uygulandığında orada da dengesizlik olduğu görüldü. Şimdilik dirençle pasif dengeleme yapılması planlanıyor.

--- a/.gitignore
+++ b/.gitignore
@@ -650,3 +650,4 @@ Simulation/slprj/accel/balancing_sim_model_induced_voltage/modelsources.txt
 Simulation/slprj/accel/balancing_sim_model_induced_voltage/defines.txt
 Simulation/slprj/accel/balancing_sim_model_induced_voltage/codedescriptor.dmr
 Simulation/slprj/accel/balancing_sim_model_induced_voltage/balancing_sim_model_induced_voltage_ref.rsp
+Prototype/Test/test diaries/2019.08.03/~$19.08.03 - Test Günlüğü - Series.docx
